support forward restricted and self destructing messages

--- a/config.py.example
+++ b/config.py.example
@@ -1,5 +1,7 @@
 API_ID = 0
 API_HASH = '0'
+FILE_PASSWORD = 'some random string'
+MAX_IN_MEMORY_FILE_SIZE = 5 * 1024 * 1024
 
 DEBUG_MODE = False
 
@@ -10,13 +12,15 @@ DELETE_SENT_STICKERS_FROM_SAVED = True
 
 PERSIST_TIME_IN_DAYS_BOT = 1
 PERSIST_TIME_IN_DAYS_USER = 1
-PERSIST_TIME_IN_DAYS_CHANNEl = 1
+PERSIST_TIME_IN_DAYS_CHANNEL = 1
 PERSIST_TIME_IN_DAYS_GROUP = 1
 
 RATE_LIMIT_NUM_MESSAGES = 5
 
+# chat where all deleted messages will be dumped
 LOG_CHAT_ID = -10000
 
+# supports both user and chat ids
 IGNORED_IDS = {
     -10000
 }
